<resources>
    <string name="app_name">Sportihome</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
    AIzaSyD82W_RERXvEuevrZxs2rAOFUZocWTZ8lc
    </string>
    <string name="sportihome_ux_font">sportihome-ux-font</string>
    <string name="sportihome_font">sportihome-webfont</string>
    <string name="sports_font">sports-font</string>
    <string name="img_alpinisme">a</string>
    <string name="img_apnee">O</string>
    <string name="img_basketball">b</string>
    <string name="img_bmx">c</string>
    <string name="img_canoe_kayak">n</string>
    <string name="img_cyclisme">f</string>
    <string name="img_dance">N</string>
    <string name="img_equitation">g</string>
    <string name="img_escalade">M</string>
    <string name="img_fitness">k</string>
    <string name="img_football">j</string>
    <string name="img_golf">i</string>
    <string name="img_handball">J</string>
    <string name="img_jetski">m</string>
    <string name="img_kitesurf">o</string>
    <string name="img_motocross">p</string>
    <string name="img_musculation">r</string>
    <string name="img_natation">F</string>
    <string name="img_parachutisme">u</string>
    <string name="img_parapente">t</string>
    <string name="img_peche">l</string>
    <string name="img_plongee">z</string>
    <string name="img_quad">s</string>
    <string name="img_rafting">w</string>
    <string name="img_randonnee">h</string>
    <string name="img_roller">x</string>
    <string name="img_running_trail">y</string>
    <string name="img_skateboard">E</string>
    <string name="img_ski">D</string>
    <string name="img_ski_de_fond">e</string>
    <string name="img_snowboard">d</string>
    <string name="img_speleologie">C</string>
    <string name="img_sport_de_combat">B</string>
    <string name="img_squash">Q</string>
    <string name="img_stand_up_paddle">v</string>
    <string name="img_surf">L</string>
    <string name="img_tennis">G</string>
    <string name="img_voile">A</string>
    <string name="img_volleyball">P</string>
    <string name="img_vtt">q</string>
    <string name="img_wakeboard">H</string>
    <string name="img_windsurf">I</string>
    <string name="img_wingsuit">R</string>
    <string name="img_yoga">K</string>
    <string name="img_marker">)</string>
    <string name="img_home">f</string>
    <string name="img_door">m</string>
    <string name="img_private">5</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string-array name="nav_item_activity_titles">
        <item>Sportihome</item>
        <item>Sportihome</item>
        <item>Sportihome</item>
    </string-array>
    <string-array name="query_suggestions">
        <item>alpinisme</item>
        <item>apnee</item>
        <item>basketball</item>
        <item>bmx</item>
        <item>canoe kayak</item>
        <item>cyclisme</item>
        <item>dance</item>
        <item>equitation</item>
        <item>escalade</item>
        <item>fitness</item>
        <item>football</item>
        <item>golf</item>
        <item>handball</item>
        <item>jetski</item>
        <item>kitesurf</item>
        <item>motocross</item>
        <item>musculation</item>
        <item>natation</item>
        <item>parachutisme</item>
        <item>parapente</item>
        <item>peche</item>
        <item>plongee</item>
        <item>quad</item>
        <item>rafting</item>
        <item>randonnee</item>
        <item>roller</item>
        <item>running_trail</item>
        <item>skateboard</item>
        <item>ski</item>
        <item>ski de fond</item>
        <item>snowboard</item>
        <item>speleologie</item>
        <item>sport de combat</item>
        <item>squash</item>
        <item>stand up paddle</item>
        <item>surf</item>
        <item>tennis</item>
        <item>voile</item>
        <item>volleyball</item>
        <item>vtt</item>
        <item>wakeboard</item>
        <item>windsurf</item>
        <item>wingsuit</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="about">A propos</string>
    <string name="about_text">"Comment identifier de manière simple et rapide les bons plans logements à côtés des spots ?

C'est pour répondre à ce besoin que nous avons décidé de créer sportihome.com, la 1ère plateforme d'hébergements d'aventures entre particuliers partageant les mêmes passions sportives.

Notre mission est de vous permettre de réserver de manière simple et sûre, l'hébergement idéalement situé pour la pratique de vos activités sportives (VTT, randonnée, golf, parapente, surf, kitesurf, équitation, etc.) et de vous faire découvrir de nouveaux spots renseignés et évalués par la communauté des sportifs.

Il vous est ainsi possible de dormir soit chez un hôte ayant la même passion sportive que vous, qui pourra partager bons plans et conseils, soit dans un logement situé au plus près du spot.

Êtes-vous prêt pour de nouvelles aventures ? Alors rejoignez la communauté des sportinautes et venez renseigner vos hébergements disponibles et vos spots.

 Fred, Sylvain &amp; Iban"</string>
    <string name="title_cgu">"Conditions Générales d'Utilisation"</string>
    <string name="cgu_text">"Sportihome (ci-après le « Site ») est une plateforme web, accessible à l’adresse www.sportihome.com, exploitée par la société Sportihome SAS, ayant son siège social situé à Cap Oméga, Rond-Point Benjamin Franklin, CS39521, 34 960 Montpellier.

Ladite plateforme est dédiée à la publication d’Annonces d'Hébergements et/ou de présentation de Spots par des Membres ayant un compte (le ou les « Utilisateur(s)») en leur permettant de créer et publier en ligne, à certaines conditions, leur profil. Les Membres ayant un compte (le ou les « Utilisateur(s)») pourront prendre contact avec les Membres proposant des Hébergements, ajouter des Hébergements et des Spots. Après avoir séjourné dans les dit Hébergements, les Membres concernés pourront poster leurs avis et commentaires relatif à ces Hébergements sur la plateforme. Les Spots peuvent quand à eux être évalués et commentés sur la plateforme à tout moment par les Membres.

L’objet des présentes Conditions Générales d’Utilisation (les « Conditions » ou prises dans leur ensemble, le « Contrat ») est de définir les termes et les conditions régissant les relations entre les Utilisateurs et Sportihome. Ces Conditions constituent un accord contractuel pour une durée indéterminée à compter de l’acceptation par l’Utilisateur du présent Contrat.

En cliquant sur « M'inscrire », l’Utilisateur reconnaît avoir pris connaissance des Conditions et accepte d’être lié par les présentes dispositions. Si l’Utilisateur accède au Site pour le compte d’une entreprise ou de toute autre entité juridique, il est néanmoins personnellement lié par le présent Contrat."</string>
    <string name="cgu_update">"Dernière mise à jour: 12 octobre 2016"</string>
    <string name="article1"><u>"Article 1 – Inscription au Site"</u></string>
    <string name="article1.1">"1.1 Définition des principaux termes"</string>
    <string name="text1.1">"Sauf s’ils sont définis dans d’autres sections du présent Contrat, les termes et expressions commençant par une majuscule utilisés ci-après ont la signification suivante :

« Annonce » désigne un post internet regroupant les informations d'un Hébergement et/ou d'un Spot mises en ligne sur une page dédiée de la plateforme par un Membre ;

« Hébergement » désigne un logement privé ou partagé proposé à la location sur le Site dont le Membre ayant publié l'Annonce dispose de la pleine jouissance ;

« Spot » désigne un lieu de pratique de sport présenté sur le Site dont le Membre ayant publié l'Annonce a vérifié au préalable l'autorisation d'accès et de pratique ;

« Membre » désigne un Utilisateur ayant un compte sur le Site ;"</string>
    <string name="article1.2">"1.2 Éligibilité au Service"</string>
    <string name="text1.2">"Pour être éligible au Service (tel que ce terme est défini à l’Article 2), l’Utilisateur doit être une personne physique ayant atteint l’âge de 18 ans et disposant de sa pleine capacité juridique."</string>
    <string name="article1.3">"1.3 Création d’un compte"</string>
    <string name="LegalDisclaimer_title">"Mentions légales"</string>
    <string name="LegalDisclaimer_text">"www.sportihome.com est édité par la société Sportihome SAS

Adresse : Cap Oméga, Rond-Point Benjamin Franklin, CS 39521, 34 960 Montpellier - FRANCE

Le site web est hébergé par Online SAS
Adresse : BP 438, 75366 Paris CEDEX 08 - FRANCE
RCS Paris B 433 115 904
https://www.online.net/

Déclaration CNIL N° xxxxx (demande en cours)"</string>
    <string name="title_how">"Comment ça marche ?"</string>
    <string name="title_travel">"Côté voyageur"</string>
    <string name="textVoyageur">"   Vous aimez faire du sport et voulez découvrir d’autres terrains de jeu sans perdre de temps à trouver les hébergements au plus près des spots.

    Explorez tous les hébergements et spots adaptés à vos envies sportives.

    Réservez chez un hôte ayant les mêmes affinités sportives que vous et qui pourra vous faire découvrir ses spots et expériences.

    Votre séjour vous a plu, partagez vos avis avec les autres sportinautes en laissant un commentaire sur l'hébergement et le spot."</string>
    <string name="title_host">"Côté hôte"</string>
    <string name="textHote">"   Vous êtes sportif ou sportif friendly et vous souhaitez louer votre hébergement à des sportifs qui vous ressemblent ?

    Publiez gratuitement votre annonce d' hébergement dans la rubrique « Devenir hôte ».

    Augmentez votre visibilité et donnez encore plus envie de venir chez vous en ajoutant un ou plusieurs spots à proximité de votre hébergement.

    Vous recevrez des demandes de réservations via notre messagerie."</string>
    <string name="title_partage">"Qu'êtes-vous prêts à partager ?"</string>
    <string name="textPartage">"    Le concept de sportihome repose sur trois notions de partage fondamentales : Stay, Share, Play, (héberger, partager, et jouer ensemble). Mais nous avons tous des personnalités et des envies différentes en matière d’interaction avec les autres, que l’on soit hôte ou voyageur.

    Voilà pourquoi nous vous offrons la possibilité d’exprimer vos attentes en matière de partage grâce aux logos SSP "Stay, Share, Play" dans vos pages de profils et d'annonces d'hébergements."</string>
    <string name="title_cout">"Combien ça coûte ?"</string>
    <string name="textCoût">"   Sportihome est actuellement en phase de lancement "bêta" et vous offre durant cette période son service de mise en relation à titre gratuit et sans commission !

    A partir de début 2017 nous étendrons nos services en ligne à la gestion des réservations, l'assurance, la sécurisation de vos transactions et plus encore, moyennant des frais de service."</string>
</resources>