<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview_how_its_work"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="fr.wildcodeschool.apprenti.sportihome.Activities.HowItsWork">

        <TextView
            android:id="@+id/title_How"
            android:text="@string/title_how"
            android:layout_centerHorizontal="true"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/img_travel"
            android:src="@drawable/how_it_works_travel"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/title_How"
            android:layout_marginTop="30dp"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/title_travel"
            android:text="@string/title_travel"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img_travel"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/trav_text"
            android:text="@string/textVoyageur"
            android:layout_below="@id/title_travel"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img_hote"
            android:src="@drawable/how_it_works_host"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/trav_text"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/title_host"
            android:text="@string/title_host"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img_hote"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/host_text"
            android:text="@string/textHote"
            android:layout_below="@id/title_host"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img_partage"
            android:src="@drawable/toothbrush"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/host_text"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/title_partage"
            android:text="@string/title_partage"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img_partage"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/partage_text"
            android:text="@string/textPartage"
            android:layout_below="@id/title_partage"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img_cout"
            android:src="@drawable/gift"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/partage_text"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/title_cout"
            android:text="@string/title_cout"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img_cout"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/cout_text"
            android:text="@string/textCoût"
            android:layout_below="@id/title_cout"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




    </RelativeLayout>



</ScrollView>
