<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:font="@string/sportihome_font"
    android:id="@+id/ScrollViewAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_legal_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="fr.wildcodeschool.apprenti.sportihome.Activities.LegalDisclaimerActivity">

        <ImageView
            android:id="@+id/img_impressum"
            android:src="@drawable/impressum"
            android:layout_centerHorizontal="true"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/title_Disclaimer"
            android:text="@string/LegalDisclaimer_title"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img_impressum"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/disclaimer_text1"
            android:layout_below="@id/title_Disclaimer"
            android:text="@string/LegalDisclaimer_text"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

<!--
        <TextView
            android:id="@+id/disclaimer_text"
            android:text="@string/LegalDisclaimer_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/title_Disclaimer"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
-->



    </RelativeLayout>
</ScrollView>
